--- a/无线网卡图片.md
+++ b/无线网卡图片.md
@@ -1,8 +1,8 @@
-![github](https://github.com/CUCCS/2018-NS-Public-jackcily/raw/master/1.jpg)
-
-
-
-![github](https://github.com/CUCCS/2018-NS-Public-jackcily/raw/%E7%A7%BB%E5%8A%A8%E4%BA%92%E8%81%94%E7%BD%91%E5%AE%89%E5%85%A8-%E6%97%A0%E7%BA%BF%E7%BD%91%E5%8D%A1/2.PNG)
 
 
 ![github](https://github.com/CUCCS/2018-NS-Public-jackcily/raw/%E7%A7%BB%E5%8A%A8%E4%BA%92%E8%81%94%E7%BD%91%E5%AE%89%E5%85%A8-%E6%97%A0%E7%BA%BF%E7%BD%91%E5%8D%A1/2.PNG)
+
+
+![github2](https://github.com/CUCCS/2018-NS-Public-jackcily/raw/master/1.jpg)
+
+
